# guitar-effects

./: .gitignore  CLI_NOTIFICATIONS_DEMO.md  CLI_NOTIFICATIONS_SUMMARY.md  COMPARISON.md  Cargo.toml  ENHANCED_CLI_QUICK_REFERENCE.md  ENHANCED_DETECTION_README.md  HEADLESS_MODE_QUICK_REFERENCE.md  PI_AUDIO_TROUBLESHOOTING.md  QUICKSTART.md  README.md  WEB_INTERFACE_README.md  WEB_INTERFACE_SUMMARY.md  WIRING_DIAGRAM.md  arpeggiator-specs.md  audio_processor.py  callback_arpeggiator.py  chord_detector.py  chordino_chord_detector.py  config.py  diagnose_audio.sh  effect_controller.py  enhanced_chord_detector.py  enhanced_guitar_detector.py  fix_audio_io.sh  fix_pi_audio.py  fix_usb_audio.sh  gpio_interface.py  guitar-arpeggiator.service  guitar-effects-web.service  guitar_synth_demo.py  guitar_tuner.py  headless_mode.py  install_headless.sh  interactive_cli.py  interactive_cli_old.py  interactive_gain_control.py  main.py  optimized_audio_processor.py  pi_audio_debug.py  (+34 more)
arpeggiator/: README.md  __init__.py  arpeggio_engine.py  callback_arpeggiator.py  simple_arpeggiator.py  synth_engine.py  working_arpeggiator.py
delay/: README.md  demo.py  (+8 more)
rust_audio_processor/: Cargo.toml  DISTORTION_GUIDE.md  PI_AUDIO_TROUBLESHOOTING.md  QUICKSTART.md  README.md  fix_audio_io.sh  pi_config.json  setup_pi.sh  test_daemon.sh  test_stereo.sh
rust_audio_processor/benches/: audio_processing_benchmark.rs
rust_audio_processor/examples/: basic_usage.rs  distortion_demo.rs
rust_audio_processor/src/: alsa_processor.rs  audio_processor.rs  config.rs  delay.rs  distortion.rs  lib.rs  main.rs
(+33 files in other folders)
