[package]
name = "rust_audio_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio processing
cpal = "0.15"
ringbuf = "0.3"
hound = "3.5"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"

# Math and utilities
num-traits = "0.2"
num-derive = "0.3"

# Threading and synchronization
crossbeam = "0.8"
parking_lot = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.9"

# Terminal detection
atty = "0.2"

# Serialization (for config)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "audio_processing_benchmark"
harness = false
